# BothMarkets

./: .gitignore  CLAUDE.md  README.md  close_foxgen_short.py  pyproject.toml  qa_live_check.py  report.py
scanner/: arb_executor.py  config.py  db.py  kalshi_client.py  kalshi_trader.py  market_matcher.py  match_validator.py  models.py  opportunity_finder.py  paper_executor.py  poly_client.py  poly_trader.py  runner.py
scripts/: create_poly_keys.py  debug_auth.py  debug_poly.py  test_trade.py
tests/: test_arb_executor.py  test_kalshi_client.py  test_kalshi_trader.py  test_market_matcher.py  test_match_validator.py  test_opportunity_finder.py  test_paper_executor.py  test_poly_client.py  test_poly_trader.py
